# flashpaste

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.md  bootstrap.sh  flake.nix  install.sh  llms.txt
.codex-fleet/: active-plan
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml
.omx/state/active-sessions/: mcp-1117812.json  mcp-1497392.json  mcp-1503008.json  mcp-1506630.json  mcp-362985.json  mcp-3665333.json  mcp-3885093.json  mcp-3885094.json  mcp-3885095.json  mcp-3885096.json  mcp-3885169.json  mcp-3885230.json  mcp-3885231.json  mcp-3885232.json  mcp-3885233.json  mcp-3885252.json  mcp-3885273.json  mcp-3885278.json  mcp-3914612.json  mcp-3914613.json  mcp-3914614.json  mcp-3914615.json  mcp-3914616.json  mcp-3914617.json  mcp-3914714.json  mcp-3914838.json  mcp-3914872.json  mcp-3914884.json  mcp-3914886.json  mcp-3914893.json  mcp-3925774.json  mcp-597389.json  mcp-602849.json  mcp-604037.json  mcp-604983.json  mcp-975147.json
docs/: README.md  architecture.md  comparison.md  faq.md  flashpaste-overlayd-plan.md  glossary.md  gnome-fallback.md  install.md  layer-shell-setup-notes.md  mcp-tool-patterns.md  overlay-cli.md  overlay-performance.md  overlay-protocol.md  overlay-quickstart.md  overlay-references.md  troubleshooting.md  use-cases.md
docs/adr/: 0001-three-progressive-tiers.md  0002-xclip-not-wl-clipboard-on-staging.md  0003-kitty-send-text-not-tmux-send-keys.md  0004-wayland-authoritative-has-image-policy.md  0005-tmux-unbind-rebind-not-pass-through.md  README.md
examples/: kitty.conf.snippet  tmux.conf.snippet
openspec/changes/flashpaste-overlayd-phase1-2026-05-20/: CHANGE.md
openspec/plans/flashpaste-overlayd-phase1-2026-05-20/: plan.json
packaging/: build-deb.sh  build-rpm.sh
packaging/aur/: PKGBUILD  PKGBUILD-git  README.md
packaging/homebrew/: README.md  flashpaste.rb
packaging/rpm/: flashpaste.spec
rs/: Cargo.toml
rs/flashpaste/: Cargo.toml
rs/flashpaste-common/: Cargo.toml
rs/flashpaste-common/src/: clipboard.rs  compress.rs  kitty_ipc.rs  lib.rs  log.rs  paths.rs  recursion_guard.rs  screenshot.rs  tmux.rs
rs/flashpaste-dispatch/: Cargo.toml
rs/flashpaste-dispatch/src/: hold_selection.rs  main.rs
rs/flashpaste-mcp/: Cargo.toml
rs/flashpaste-mcp/src/: main.rs
rs/flashpaste-overlayd/: Cargo.toml
rs/flashpaste-overlayd/src/: ipc.rs  lib.rs  main.rs  protocol.rs  render.rs  store.rs  surface.rs
rs/flashpaste-overlayd/tests/: integration.rs  ipc.rs  performance.rs
rs/flashpaste-shoot/: Cargo.toml
rs/flashpaste-shoot/src/: main.rs
rs/flashpaste-trigger/: Cargo.toml
rs/flashpaste-trigger/src/: main.rs
rs/flashpaste/src/: main.rs
rs/flashpasted/: Cargo.toml
rs/flashpasted/src/: agent.rs  inotify_watch.rs  ipc.rs  kitty.rs  main.rs  paste.rs  state.rs  tmux.rs  wayland.rs  x11.rs
share/applications/: org.flashpaste.daemon.desktop  wl-clipboard.desktop  wl-copy.desktop  wl-paste.desktop
skills/flashpaste/: SKILL.md
systemd/: clipboard-janitor.service  flashpaste-overlayd.service  flashpasted.service
systemd/ydotoold.service.d/: flashpaste-socket.conf
tests/: click-through.md
