[workspace]
resolver = "2"
members = [
    "flashpaste-common",
    "flashpaste-dispatch",
    "flashpasted",
    "flashpaste-trigger",
    "flashpaste-shoot",
    "flashpaste-mcp",
    "flashpaste",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NagyVikt"]
repository = "https://github.com/NagyVikt/flashpaste"
rust-version = "1.75"

[workspace.dependencies]
# clipboard / wayland / x11
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
wl-clipboard-rs = "0.9"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# fs watch + io
notify = "6"
inotify = "0.10"

# async runtime (daemon)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "io-std", "signal", "time", "sync", "fs"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# misc
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }
once_cell = "1"

# portal screenshot (Phase 3)
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
zbus = "4"

# internal
flashpaste-common = { path = "flashpaste-common" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
