[package]
name = "flashpaste-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared library for flashpaste: paths, recursion guard, clipboard staging, kitty IPC, tmux helpers, logging."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# NOTE: x11rb is NOT used directly in flashpaste-common — the X11
# selection event loop lives in the dispatch binary (re-exec target).
# The library only exposes `clipboard::stage_image`, which spawns the
# binary as a subcommand. Keeping the x11rb dep out of `common` shaves
# build time for downstream crates that don't need X11.
