[package]
name = "flashpasted"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Long-lived clipboard owner + paste dispatcher for flashpaste. Watches ~/Pictures/Screenshots/ via inotify, holds Wayland and X11 selections persistently, accepts paste triggers over a unix socket, and drives the kitty IPC + tmux unbind/rebind dance natively."

[[bin]]
name = "flashpasted"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
clap = { workspace = true }
inotify = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
wl-clipboard-rs = { workspace = true }
x11rb = { workspace = true }
